問い合わせの実装
